[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support_agent_openenv"
version = "0.1.0"
description = "A real-world customer support agent environment following the OpenEnv specification."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "pyyaml",
    "requests",
]

[project.scripts]
support-agent = "app:start"

[tool.hatch.build.targets.wheel]
packages = ["."]
